# investments-portfolio-analysis

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  compose.override.yaml  devcontainer.json  docker-compose.yml
spark-warehouse/stocks/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
src/: setup_unity_tables.py  spark_session.py
src/bronze/: ingest_assets_prices.py
tests/: conftest.py  pytest.ini  test_spark_session.py
