[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark==3.3.0",
    "pyspark==3.5.4",
    "yfinance==0.2.52",
]

[dependency-groups]
dev = [
    "jupyterlab==4.3.5",
    "mypy==1.12.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-ordering==0.6",
    "ruff==0.9.4",
]
